--- a/demo-sb-customer/src/main/resources/application.yml
+++ b/demo-sb-customer/src/main/resources/application.yml
@@ -12,3 +12,10 @@ spring.datasource:
 spring.jpa:
   show-sql: true
   hibernate.ddl-auto: update
+
+# Custom Variables
+api:
+  jsonplaceholder:
+    domain: "jsonplaceholder.typicode.com"
+    endpoints:
+      users: "/users"
