--- a/bc-forum/src/main/resources/application.yml
+++ b/bc-forum/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8200
+
+api:
+  jph:
+    host: "jsonplaceholder.typicode.com"
+    endpoints:
+      users: "/users"
+      posts: "/posts"
+      comments: "/comments"
