--- a/bc-forum/pom.xml
+++ b/bc-forum/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bootcamp.demo</groupId>
+	<groupId>com.bootcamp.bc</groupId>
 	<artifactId>bc-forum</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bc-forum</name>
